# WizEngineQuickStart

./: .gitignore  CMakeLists.txt  Makefile  README.md  clean.sh
.github/workflows/: cmake.yml  ubuntu-client.yml  ubuntu.yml  ubuntu18.yml  ubuntu20.yml  windows-client.yml  windows.yml
client/: CMakeLists.txt  Makefile  switch-build.sh
client/include/: Box2DTestScreen.h  ExampleGame.h  FakeAsset.h  GameAssets.h  HelloSFMLScreen.h  LoadingScreen.h  TGUIScreen.h  TitleScreen.h  asset_resolver.h
client/include/test_subdir/: test_subdir.h
client/src/: Box2DTestScreen.cpp  ExampleGame.cpp  FakeAsset.cpp  GameAssets.cpp  HelloSFMLScreen.cpp  LoadingScreen.cpp  TGUIScreen.cpp  TitleScreen.cpp  asset_resolver.cpp  main.cpp
client/src/test_subdir/: test_subdir.cpp  test_subdir.cpp.txt
common/: CMakeLists.txt  switch-install.sh
common/cmake/Switch/: FindLibOpenAL.cmake  FindLibZ.cmake  FindLibnx.cmake  FindSDL2.cmake
common/include/: CommonExample.h
common/src/: CommonExample.cpp
core/: CMakeLists.txt  install-built-library.sh
core/cmake/: Config.cmake
core/cmake/Switch/: FindLibOpenGL.cmake  FindLibVorbis.cmake
core/cmake/toolchains/: DevkitA64Libnx.cmake
core/include/asset/: Asset.h  AssetBase.h  AssetLoader.h  FontAsset.h  MusicAsset.h  SinglePathAsset.h  SoundAsset.h  TextureAsset.h
core/include/game/: Game.h  Screen.h
core/include/logging/: DailyFileLogger.h  DateTimeLoggerWrapper.h  FileLogger.h  Logger.h  LoggerBase.h  MultiLogger.h  StdOutLogger.h  TagLoggerWrapper.h
core/include/util/: FileUtil.h  StringUtil.h
core/src/asset/: Asset.cpp  AssetLoader.cpp  FontAsset.cpp  MusicAsset.cpp  SoundAsset.cpp  TextureAsset.cpp
core/src/game/: Game.cpp  Screen.cpp
core/src/logging/: DailyFileLogger.cpp  DateTimeLoggerWrapper.cpp  FileLogger.cpp  LoggerBase.cpp  MultiLogger.cpp  StdOutLogger.cpp  TagLoggerWrapper.cpp
core/src/util/: FileUtil.cpp
examples/server/: CMakeLists.txt
examples/server/src/: main.cpp
include/: os_finder.h
server/: CMakeLists.txt
server/src/: main.cpp
source/: main.cpp
src/: main.cpp
src/desktop/: asset_resolver.cpp
src/switch/: asset_resolver.cpp
